_sass/components/_header.scss
/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\
**  Main site header
**	The one with the gradient
\~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
.site-header {
	background-image: linear-gradient(to left, #00d9bf, #24efa6);
	width: 100%;
	height: 100vh;
	padding-top: 12rem;
	overflow: hidden;

	@include mq($tablet-portrait) {
		padding-top: 19.6rem;
	}

	@include mq($tablet-landscape) {
		padding-top: 17.6rem;
	}

	@include mq($laptop) {

	}

	h1 {
		@extend %masthead-text;
		margin: 0;

		@include mq ($tablet-portrait) {
			margin: 0 0 3.6rem;
		}

		@include mq($tablet-landscape) {
			max-width: 85rem;
			margin: 0 0 2rem;
		}

		@include mq($laptop) {
			margin: 0 0 5rem;
			max-width: none;
		}
	}

	h2 {
		display: none;
		margin: 3.2rem 0 0;
		font-family: $base-font-family;
		font-size: 2.844rem;
		font-weight: 500;
		line-height: 1.1;
		letter-spacing: -0.1px;
		color: $eggshell-blue;

		@media only screen and (min-width: 640px) {
			display: block;
		}

		@media only screen and (min-width: 1024px) {
			font-size: 2.8rem;
			font-weight: 500;
			line-height: 1.29;
			letter-spacing: -0.1px;
		}

		@media only screen and (min-width: 1366px) {
			font-size: 4.267rem;
		}
	}

	.get-in-touch__btn {
		position: fixed;
		bottom: 3.375rem;
		right: 3rem;
		z-index: 25;
	}

	.wrapper::after {
		display: none;
	}
}

//The logo
.site-header__logo > img {
	height: 2.6rem;

	@media only screen and (min-width: 1024px) {
		height: 3.6rem;
	}

	@media only screen and (min-width: 1366px) {
		height: 4.7rem;
	}
}

//The roated text to scroll
.rotated-text {
	transform: translateX(-0.5px);
	margin-top: 6rem;

	@include mq($tablet-portrait) {
		margin-top: 19rem;
	}

	@include mq($tablet-landscape) {
		margin-top: 6.4rem;
	}

	@include mq($desktop) {
		margin-top: 9.45rem;
	}
}

//The buttons
.site-header__burger--nav {

	&.is-triggered {
		opacity: 0;
	}

	@media only screen and (min-width: 1366px) {
		display: none;
	}
}

/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\
**  The Wrapper be FLEXING
\~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
.site-header--mini,
.logo-n-burger {

	.wrapper {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
		align-items: center;

		&::after {
			display: none;
		}
	}
}

.logo-n-burger {
	width: 100%;
	position: fixed;
	top: 3.5rem;
	left: 0;
	z-index: 50;

	@include mq($tablet-portrait) {
		top: 12rem;

		.site-header__burger {
			transform: translateY(-3rem);
		}
	}

	@include mq($tablet-landscape) {
		top: 9rem;

		.site-header__burger {
			transform: translateY(0);
		}
	}

	@include mq($desktop) {
		top: 10.2rem;
	}

	#Job-Offer---Mobile {
		stroke: white;
	}

	&.is-airborne {

		svg {
			transform: scale(1.25);
		}

		#Job-Offer---Mobile {
			stroke: $brand-black;
		}

		.site-header__logo {
			opacity: 0;
		}
	}
}

//All the transitions
.site-header,
.site-header__logo,
.site-header__burger--nav,
svg,
#Job-Offer---Mobile {
	transition: all 0.2s ease-in;
}

/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\
**  Mini Header
**	The header for the job listing
\~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
.site-header--mini {
	padding-top: 3.375rem;
	padding-bottom: 3.375rem;

	.site-header__burger {
		flex: 0 0 auto;
		position: relative;
		transform: translateX(-2px);

		&::before {
			content: 'Open positions';
			width: 18rem;
			padding-right: 2rem;
			position: absolute;
			top: 0;
			right: 100%;
			font-family: $inconsolata-font-family;
			line-height: 1;
			font-size: 1.896rem;
			text-transform: uppercase;
			text-align: right;
			color: $azul;
			opacity: 0;
			transition: opacity 0.2s ease;

			@media only screen and (min-width: 640px) {
				opacity: 1;
			}
		}

		&.is-triggered {
			position: relative;
			z-index: 1000;

			&::before {
				color: #fff;
				opacity: 1;
			}

			#Job-Offer---Mobile {
				stroke: #fff;
			}
		}

		svg {
			transition: stroke 2s ease;
		}

		@media only screen and (min-width: 1024px) {
			display: none;
		}
	}

	.logo-normal {
		height: 0;
		opacity: 0;
	}

	@media only screen and (min-width: 768px) {

		.logo-mobile {
			height: 0;
			opacity: 0;
		}

		.logo-normal {
			height: auto;
			opacity: 1;
		}
	}
}

.manifesto {

	.site-header__burger {

		&::before {
			display: none;
		}
	}
}

